minor code changes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL=smartpolicewebportal@gmail.com
-PASSWORD=yboi tsnl ndkd bbof
+EMAIL=smartpolicewebportal@gmail.com;
+PASSWORD=yboi tsnl ndkd bbof;
