sign part updated

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-EMAIL=smartpolicewebportal@gmail.com
-PASSWORD=yboi tsnl ndkd bbof
+EMAIL=smartpolicewebportal@gmail.com;
+PASSWORD=yboi tsnl ndkd bbof;
+MONGOCLUSTER=mongodb+srv://usmanDb:Allahis1..@demo.kzo4w7r.mongodb.net/;
+MONGO=`mongodb://localhost:27017/admin`
