--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-EMAIL=smartpolicewebportal@gmail.com;
-PASSWORD=yboi tsnl ndkd bbof;
-MONGOCLUSTER=mongodb+srv://usmanDb:Allahis1..@demo.kzo4w7r.mongodb.net/;
+EMAIL=smartpolicewebportal@gmail.com
+PASSWORD=yboi tsnl ndkd bbof
+MONGOCLUSTER=mongodb+srv://usmanDb:Allahis1..@demo.kzo4w7r.mongodb.net/
 MONGO=`mongodb://localhost:27017/admin`
+JWT_SECRET = my-32-character-ultra-secure-and-ultra-long-secret
